appId: app.runnr.android
---
- launchApp:
    clearState: true
- assertVisible: "Guide: Modal form factor"
- tapOn: Done
- tapOn: Close
- tapOn: Dismiss

- tapOn: Explore
- tapOn: User
- tapOn: Today

- tapOn: Guide/Survey Flag Key
- inputText: guide-guide-popover-form-f
- tapOn: Show Guide/Survey
- tapOn: On tap (Show guide with Modal form)
- tapOn: Done
