appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "guide-e2e-go-to-step-c59"
- tapOn: Show Guide/Survey

- assertVisible: Step 1
- tapOn: Proceed

- assertVisible: Step 3
- tapOn: Proceed

- assertVisible: Step 2
- tapOn: Close