appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "survey-e2e-show-survey"
- tapOn: Show Guide/Survey

- assertVisible: Show Survey
- tapOn: Trigger the Survey!

- assertVisible: Display from Survey!
- tapOn: Close
