appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "survey-e2e-image"
- tapOn: Show Guide/Survey

- assertVisible: shrek-shrek-rizz.gif

- tapOn: Close
- assertNotVisible: shrek-shrek-rizz.gif
