appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "survey-e2e-list-option"
- tapOn: Show Guide/Survey

- assertVisible: List menu
- assertVisible: Option 1
- assertVisible: Option 2
- assertVisible: Option 3

- tapOn: Continue

- assertVisible: Select an option
- tapOn: Submit
