appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "survey-e2e-survey-form"
- tapOn: Show Guide/Survey

- assertVisible: Long answer
- assertVisible: Long answer placeholder

- tapOn: Share Feedback

- assertVisible: Short answer
- assertVisible: Short answer placeholder

- tapOn: Submit
