appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "guide-e2e-banner"
- tapOn: Show Guide/Survey

# Assert
- assertVisible: This is a working top banner!

# Check if close is working
- tapOn: Close
- assertNotVisible: This is a working top banner!
