appId: app.runnr.android
tags:
  - andriod
---
- launchApp:
    clearState: true
- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000

# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "guide-e2e-carousel"
- doubleTapOn: Test Events
- waitForAnimationToEnd

- tapOn:
    text: Show Guide/Survey
    delay: 3000

# Check if nudge appears
- assertVisible: Hello! This is a working carousel!

- tapOn: Close
- assertNotVisible: Hello! This is a working carousel!
