appId: app.runnr.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: 🎲 Generate Random User ID
- doubleTapOn: Reboot SDK

- extendedWaitUntil:
    visible:
      text: Tooltip Marker
    timeout: 20000
# Nudge Trigger
- doubleTapOn: Guide/Survey Flag Key
- inputText: "guide-e2e-popover"
- tapOn: Show Guide/Survey

# Assert
- assertVisible: This is a popover nudge
- assertVisible: Sample content from a popover nudge


- tapOn: Close
- assertNotVisible: This is a popover nudge