appId: com.app.RunnrHost
---
- launchApp:
    clearState: true      

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn: info

# Assert
- assertVisible: Tooltip nudge

- tapOn: Explore
- assertNotVisible: Tooltip nudge

- tapOn: Today
- tapOn: info
- assertVisible: Tooltip nudge

# Check if close is working
- tapOn: Close
- assertNotVisible: Tooltip nudge
