appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "survey-e2e-app-store-rating"
- tapOn: Show Guide/Survey

# in iOS image has no identifier
- assertVisible: App Store Rating
- tapOn: Done
- assertVisible: Tap a star to rate it on the App Store.
- tapOn: Not Now
