appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "guide-e2e-forward-back"
- tapOn: Show Guide/Survey

- assertVisible: Welcome to step 1
- tapOn: Continue

- assertVisible: Welcome to step 2
- tapOn: Go back

- assertVisible: Welcome to step 1
- tapOn: Close
