appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "guide-e2e-go-to-step"
- tapOn: Show Guide/Survey

- assertVisible: Step 1
- tapOn: Proceed

- assertVisible: Step 3
- tapOn: Proceed

- assertVisible: Step 2
- tapOn: Close
