appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "survey-e2e-list-option-6d5"
- tapOn: Show Guide/Survey

- assertVisible: List menu
- assertVisible: Option 1
- assertVisible: Option 2
- assertVisible: Option 3

- tapOn: Continue

- assertVisible: Select...
- tapOn: Submit
