appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "survey-e2e-ratings-cb0"
- tapOn: Show Guide/Survey

- assertVisible: Stars
- assertVisible:
    id: star

- tapOn: Share Feedback

- assertVisible: Numbers
- assertVisible: "1"
- assertVisible: "2"
- assertVisible: "3"
- assertVisible: "4"
- assertVisible: "5"
- tapOn: Continue

- assertVisible: Emojis
- assertVisible: 🙁
- assertVisible: 🙂
- assertVisible: 🤩
- tapOn: Continue

- assertVisible: NPS
- assertVisible: "1"
- assertVisible: "2"
- assertVisible: "3"
- assertVisible: "4"
- assertVisible: "5"
- assertVisible: "6"
- assertVisible: "7"
- assertVisible: "8"
- assertVisible: "9"
- assertVisible: "10"
- tapOn: Submit
