appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "survey-e2e-text-input"
- tapOn: Show Guide/Survey

- assertVisible: Long answer
- assertVisible: Long answer placeholder

- tapOn: Share Feedback

- assertVisible: Short answer
- assertVisible: Short answer placeholder

- tapOn: Submit
