appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- tapOn: Generate Random User ID
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name

- extendedWaitUntil:
    visible:
      text: info
    timeout: 20000

- tapOn:
    text: Guide/Survey Flag Key
    retryTapIfNoChange: false
    repeat: 2
    delay: 3000
- inputText: "guide-e2e-popover-0e8"
- tapOn: Show Guide/Survey

# Assert
- assertVisible: This is a popover nudge
- assertVisible: Sample content from a popover nudge

- tapOn: Close
- assertNotVisible: This is a popover nudge
