appId: com.app.RunnrHost
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: Reboot SDK
- doubleTapOn: Reboot SDK

# Nudge Trigger
- scrollUntilVisible:
    direction: UP
    element: Event Name
- tapOn: Guide/Survey Flag Key
- inputText: "survey-e2e-video"
- tapOn: Show Guide/Survey

- assertVisible: Play video

- tapOn: Close
- assertNotVisible: YouTube Home
